@@ -118,6 +118,8 @@ module ElasticAPM
         sinatra
         tilt
         rake
+        action_controller
+        action_dispatch
       ]
     end
 
